problematica de trabajar sin calses

--- a/index.html
+++ b/index.html
@@ -86,7 +86,15 @@
      -->  
 
      <!-- <script src="assets/js/ciclos/while-do-while.js"></script> -->
-     <script src="assets/js/ciclos/for.js"></script>
+
+        <!--script src="assets/js/ciclos/for.js"></script-->
+    <!--
+
+        *********CLASES*********
+
+     -->  
+     <!--script src="assets/js/ciclos/for.js"></script-->
+     <script src="assets/js/classes/problema.js"></script>
 
      
 
